--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,10 +6,10 @@ spring:
       exclude: WEB-INF/**  #排除文件(不重启项目)
   freemarker:
     cache: false    #页面不加载缓存，修改即时生效
-  redis:
-    database: 1
-    host: 127.0.0.1
-    port: 6379
+#  redis:
+#    database: 1
+#    host: 127.0.0.1
+#    port: 6379
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://127.0.0.1/partner?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=true&allowMultiQueries=true
@@ -48,8 +48,9 @@ server:
     cache: false
 debug:
   true
----
+
 application:
+  debug: true
   activities:
     - scheme: travel
       fields:
@@ -69,9 +70,8 @@ application:
             - 篮球
             - 羽毛球
             - 乒乓球
-            # 可以增加默认选项
+#             可以增加默认选项
 
----
 name: test-YAML
 environment: testing
 enabled: false
