--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <!-- Opentracing 对 MongoDB 的支持 -->
+        <dependency>
+            <groupId>io.opentracing.contrib</groupId>
+            <artifactId>opentracing-mongo-driver</artifactId>
+            <version>0.1.5</version>
+        </dependency>
         <!-- FastJSON -->
         <dependency>
             <!-- Use MySQL Connector-J -->
